@@ -3,6 +3,7 @@ git-annex (0.11) UNRELEASED; urgency=low
   * If available, rsync will be used for file transfers from remote
     repositories. This allows resuming interrupted transfers.
   * Added remote.annex-rsync-options.
+  * Avoid deleting temp files when rsync fails.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 02 Dec 2010 16:54:12 -0400
 
